Revert "Added swagger for create, update and delete lease API"
