# server/docs/swagger.json
@@ -107,165 +107,6 @@
                         }
                     }
                 }
-            },
-            "post": {
-                "description": "Create a new lease",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "leases"
-                ],
-                "summary": "Create lease",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "token header",
-                        "name": "token",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
-                        "description": "body",
-                        "name": "body",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/models.Lease"
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/leases/{leaseId}": {
-            "get": {
-                "description": "Get details of leases",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "leases"
-                ],
-                "summary": "Get details lease",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "token header",
-                        "name": "token",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "leaseId",
-                        "name": "leaseId",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/models.Lease"
-                            }
-                        }
-                    }
-                }
-            },
-            "put": {
-                "description": "Update the existing lease",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "leases"
-                ],
-                "summary": "Update lease",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "token header",
-                        "name": "token",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
-                        "description": "body",
-                        "name": "body",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/models.Lease"
-                            }
-                        }
-                    }
-                }
-            },
-            "delete": {
-                "description": "Update the existing lease",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "leases"
-                ],
-                "summary": "Delete lease",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "token header",
-                        "name": "token",
-                        "in": "header",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/models.Lease"
-                            }
-                        }
-                    }
-                }
             }
         },
         "/login": {
